istio-teaching/envoyfilters/applyto/csrf/samesite/csrf-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csrf
  labels:
    app: csrf
spec:
  selector:
    matchLabels:
      app: csrf
  replicas: 1
  template:
    metadata:
      labels:
        app: csrf
        version: v1
    spec:
      containers:
        - name: csrf
          image: registry.cn-hangzhou.aliyuncs.com/hxpdocker/csrf-satesite:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: csrf
spec:
  selector:
    app: csrf
  ports:
    - name: tcp-csrf
      protocol: TCP
      port: 8080
      targetPort: 8080
---
