istio-teaching/envoyfilters/applyto/csrf/samesite/vs-csrf.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: csrf
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        prefix: /
    corsPolicy:
      allowOrigins:
      - exact: http://bookinfo.demo:30986
      - exact: http://192.168.198.154:8081
      allowMethods:
      - GET
      - OPTIONS
      - POST
      maxAge: "1m"
      allowHeaders:
      - content-type
    route:
    - destination:
        host: csrf.istio.svc.cluster.local
        port:
          number: 8080
